tests/NormalTests/paczka1/fuzzy1/91846135.err
Error in line 6: ePL A315 21,1
Error in line 2: aZ2 S371 73,9
Error in line 12: ePL S452 1,6
Error in line 14: ePL A315 23,0
Error in line 21: aZ2 S4S2 14,9
Error in line 27: aZ2 S557 6,6
